# SimpleCoder

./: .env  .gitignore  README.md  pyproject.toml
simplecoder/: __init__.py  __main__.py  agent.py  cli.py  config.py  context.py  llm.py  prompt.py  session.py
simplecoder/tools/: __init__.py  agent.py  base.py  bash.py  edit.py  grep.py  now.py  read.py  write.py
tests/: test_agent_llm.py  test_core.py  test_session.py  test_tools.py
