[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplecoder"
version = "0.1.0"
description = "Annotated minimal AI coding agent based on CoreCoder, without FastAPI, frontend, or RAG."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
litellm = ["litellm>=1.60.0,<2.0.0"]
dev = ["pytest>=7.0", "ruff>=0.9.0"]

[project.scripts]
simplecoder = "simplecoder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["simplecoder"]

[tool.ruff]
line-length = 130
target-version = "py310"
